--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Atividade de Testes Unitários realizada durante o último ano do curso de Desenvolvimento de Sistemas no Senai - Boqueirão",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
