--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "node": "^25.2.1"
   }
 }
