--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "jest": "^30.2.0",
-    "node": "^25.2.1"
+    "node": "^25.2.1",
+    "prompt-sync": "^4.2.0"
   }
 }
